--- a/join/pytest.ini
+++ b/join/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = --reuse-db --nomigrations --cov=./
-DJANGO_SETTINGS_MODULE = beluz.settings.test
+DJANGO_SETTINGS_MODULE = join.settings.test
 python_files = tests.py test_*.py *_tests.py
