--- a/supervisor/join.conf
+++ b/supervisor/join.conf
@@ -1,6 +1,6 @@
 [program:join_gunicorn]
 user=ubuntu
-command=/home/ubuntu/.virtualenvs/join/bin/gunicorn ceg.wsgi --name ceg --bind=0.0.0.0:8000 --workers 4 --timeout 600 --log-level=debug
+command=/home/ubuntu/.virtualenvs/join/bin/gunicorn join.wsgi --name join --bind=0.0.0.0:8000 --workers 4 --timeout 600 --log-level=debug
 environment=DJANGO_SETTINGS_MODULE="join.settings.prod",LANGUAGE="es_AR.UTF-8",LC_ALL="es_AR.UTF-8"
 directory=/home/ubuntu/join/join/
 stderr_logfile = /home/ubuntu/logs/join/gunicorn/stderr.log
